Fix: Critical production crashes - Dashboard & Profile\n\n- Fixed NaN division errors in UnifiedBusinessInsights (earnings display)\n- Fixed array mapping on undefined in history data\n- Fixed Math.max crash on empty arrays\n- Fixed toLocaleString crash in LifetimePerformance\n- Added comprehensive error handling in dashboard data loading\n- Added AsyncStorage persistence for login state\n- Fixed duplicate tab icon (dashboard.constants)\n- Added safe number handling for all math operations\n- Added empty state handling for missing data\n\nAll production crashes resolved. App now handles undefined/null data gracefully.

--- a/app.json
+++ b/app.json
@@ -9,6 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "android": {
+      "package": "com.slotb.partner",
+      "versionCode": 1,
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -17,7 +19,9 @@
       },
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE"
       ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -50,6 +54,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6b038800-78f8-4746-bbd2-c96b63bdb3ba"
+      }
     }
   }
 }
