--- a/app.json
+++ b/app.json
@@ -1,19 +1,18 @@
 {
   "expo": {
-    "name": "SlotB-Partner-demo",
+    "name": "SlotB.in",
     "slug": "SlotB-Partner-demo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/slotb-icon-v4.png",
     "scheme": "slotbpartnerdemo",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
     "android": {
       "package": "com.slotb.partner",
       "versionCode": 4,
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
+        "backgroundColor": "#FFFFFF",
+        "foregroundImage": "./assets/images/slotb-icon-v4.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
@@ -47,17 +46,24 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/slotb-icon-v4.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#ffffff"
           }
         }
       ],
       "expo-image-picker",
-      "expo-location"
+      "expo-location",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/slotb-icon-v4.png",
+          "color": "#ffffff"
+        }
+      ]
     ],
     "extra": {
       "router": {},
