--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -27,6 +28,7 @@
     "expo-linking": "~8.0.11",
     "expo-location": "^19.0.8",
     "expo-navigation-bar": "~5.0.10",
+    "expo-notifications": "~0.32.15",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
